added source code of released version